# gemtest-webapp

./: .coveragerc  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  qodana.yaml
app/: __init__.py  routes.py  run.py
app/static/css/: styles.css
app/templates/: empty_landing_page.html  landing_page.html  mtc_detail_view.html
scripts/: cov.py  install_hook.py  lint.py  run_tests.py
tests/end2end/: conftest.py
tests/end2end/report_tests/: test_example_execution.py  test_web_application.py
tests/end2end/test_data/: dynamic_sut.py  metamorphic_test_run_2024-09-24_00-00-01.db  metamorphic_test_run_2024-09-24_00-00-02.db  test_sin_example.py
